third_party/move/move-compiler-v2/tests/checking/utf8-comment/utf-8-in-identifier-name.move
address 0x42 {
    module M1 {
        fun u(): u64 { 0 }
        const C字符串: vector<u8> = b"abc";
    }
}
